day 8 cucumber added Ensar branch and update for paraleltest

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
 
     <build>
@@ -53,6 +52,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version>
                 <configuration>
+                    <parallel>methods</parallel>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
                     <testFailureIgnore>true</testFailureIgnore>
                     <runOrder>Alphabetical</runOrder>
                     <rerunFailingTestsCount>1</rerunFailingTestsCount>
