--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>7.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>7.0.0</version>
+        </dependency>
 
     </dependencies>
 
