--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=remote_chrome
+browser=mobile_chrome
 url=http://eurotech.study/login
 urlIP=http://92.205.106.232/login
 usernameTeacher=eurotech@gmail.com
